trivial: Use g_autoptr() for the SoupURI

The soup_uri_free() function is not NULL safe.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=762689